feat: testes unitários da classe de serviço de pedido
concluídos os testes unitários da OrderService e testes da AddressService iniciados